--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@ services:
     autoconfigure: true
     public: false
 
+  effinix.user_permission.logger.null:
+    class: Psr\Log\NullLogger
+
   Effinix\UserPermissionBundle\:
     resource: '../src/*'
     exclude: '../src/{DependencyInjection,DependencyInversion,Entity}'
